--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://ahmedelbhooti:Admin123@cluster0.0h087rw.mongodb.net/users?retryWrites=true&w=majority
+MONGO_URI = "URI"
